# svm

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.txt  README.md  ci.sh  package-lock.json  qkq  rust-toolchain.toml  svm-codec-ci.sh
apps/: .gitignore  Cargo.toml
apps/precompiled/: transfer.wasm  transfer.wast  wallet.wasm  wallet.wast
apps/simple-vault/: Cargo.toml
apps/simple-vault/src/: lib.rs
apps/src/transfer/: build.sh
apps/src/transfer/src/: lib.rs
apps/src/wallet/: Cargo.toml  build.sh
apps/src/wallet/src/: auth.rs  computations.rs  constants.rs  imports.rs  lib.rs  read.rs  write.rs
apps/src/wallet/tests/: hostctx.rs  offsets.rs  sizeof.rs
apps/tests/wallet/: Cargo.toml
apps/tests/wallet/tests/: wallet.rs
apps/transfer/: Cargo.toml
apps/transfer/src/: lib.rs
apps/vault/core/: Cargo.toml
apps/vault/core/src/: action.rs  amount.rs  data.rs  lib.rs  vault_type.rs
apps/vault/tla-plus/: .gitignore  sm_vault.tla  svm_vault.tla
apps/vault/tla-plus/sm_vault.toolbox/: .project  sm_vault.tla.pmap
apps/vault/wasm/: Cargo.toml  build.sh
apps/vault/wasm/src/: lib.rs
apps/wallet/: Cargo.toml  build.sh
apps/wallet/src/: auth.rs  computations.rs  constants.rs  imports.rs  lib.rs  read.rs  vesting.rs  write.rs
apps/wallet/tests/: offsets.rs  sizeof.rs
apps/wasm/: wallet.wasm  wallet.wast
crates/abi-encoder/: Cargo.toml
crates/abi-encoder/src/: lib.rs  traits.rs
crates/abi-encoder/src/types/: address.rs  amount.rs  boolean.rs  mod.rs  numeric.rs  option.rs  small_array.rs  tuples.rs  unit.rs
crates/cli/: Cargo.toml
crates/cli/examples/: spawn.json  tx-call.json  tx-deploy.json  tx-spawn.json
crates/cli/examples/craft-deploy/: Cargo.toml  Template-meta.json  (+4 more)
crates/cli/src/: clap_app.rs  main.rs  sections.rs  subcmd_auto_deploy.rs  subcmd_tx.rs  subcmd_validate.rs
crates/codec/: Cargo.toml  build.sh
crates/codec/codecjs/: .gitignore  package-lock.json  package.json
crates/codec/examples/: .gitignore  package-lock.json  package.json  test.js
crates/codec/src/: app.rs  call.rs  codec.rs  codec_impls.rs  context.rs  envelope.rs  error.rs  ext.rs  field.rs  inputdata.rs  lib.rs  spawn.rs  template.rs  transaction.rs  type.rs  version.rs  wasm_ffi.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: compiler.rs  lib.rs
crates/ffi/: Cargo.toml  build.rs
crates/ffi/src/: address.rs  byte_array.rs  callback.rs  env.rs  layout.rs  lib.rs  macros.rs  state.rs
crates/gas/: Cargo.toml
crates/gas/src/: block.rs  call_graph.rs  code_reader.rs  detect_loops.rs  error.rs  errors.rs  estimate.rs  function.rs  gas.rs  import.rs  lib.rs  op.rs  program.rs  program_reader.rs  read.rs  traits.rs  validation.rs
crates/gas/tests/: cfg.rs  estimate_tests.rs  helpers.rs  inspect.rs  old.rs  pricing.rs  read.rs  validate_tests.rs  validation.rs
crates/genesis-templates/: Cargo.toml
crates/genesis-templates/src/: lib.rs
crates/hash/: Cargo.toml
crates/hash/src/: lib.rs
crates/kv/: Cargo.toml
crates/kv/src/: lib.rs  memory.rs  traits.rs
crates/kv/tests/: memory_kv_tests.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs  query.rs  render.rs  schema.rs
crates/query/tests/: query_tests.rs
crates/runtime/: .gitignore  Cargo.toml  README.md
crates/runtime-ffi/: Cargo.toml  build.rs
crates/runtime-ffi/src/: api.rs  api_safer.rs  byte_array.rs  c_api.rs  config.rs  error.rs  lib.rs  macros.rs  ptr.rs  ref.rs  resource_tracker.rs  result.rs  runtime_tracker.rs  testing.rs
crates/runtime-ffi/tests/: api_tests.rs
crates/runtime-testing/: Cargo.toml
crates/runtime-testing/src/: lib.rs
crates/runtime/src/: context.rs  error.rs  ext.rs  func_env.rs  lib.rs  price_registry.rs  storage.rs  storage_builder.rs  testing.rs  wasm_store.rs
crates/runtime/tests/: runtime_tests.rs  vmcalls_tests.rs
crates/sdk/: Cargo.toml  MyTemplate-meta.json
crates/sdk-host/: Cargo.toml
crates/sdk-host/src/: lib.rs  mock.rs
crates/sdk-macros/: Cargo.toml
crates/sdk-macros/src/: json.rs  lib.rs  template.rs
crates/sdk-storage/: Cargo.toml
crates/sdk-storage/src/: ext.rs  lib.rs  mock.rs
crates/sdk-tests/: Cargo.toml
crates/sdk-tests/src/: lib.rs
crates/sdk-tests/tests/: ctor.rs  funding.rs  template.rs
crates/sdk-types/: Cargo.toml
crates/sdk-types/src/: amount.rs  lib.rs  value.rs
crates/sdk/alloc/: Cargo.toml
crates/sdk/host/: Cargo.toml
crates/sdk/macros/: Cargo.toml
crates/sdk/src/: lib.rs
crates/sdk/std/: Cargo.toml
crates/sdk/storage/: Cargo.toml
crates/sdk/tests/: ensure_tests.rs
crates/sdk/types/: Cargo.toml
crates/state/: Cargo.toml
crates/state/src/: account_data.rs  account_storage.rs  backend.rs  error.rs  genesis_config.rs  global_state.rs  gs.rs  lib.rs  storage.rs  template_storage.rs  trie_node.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  testing.rs
crates/storage/tests/: account_storage_tests.rs  app_storage_tests.rs
crates/svm-abi/: Cargo.toml
crates/svm-abi/decoder/: Cargo.toml
crates/svm-abi/encoder/: Cargo.toml
crates/svm-abi/src/: lib.rs  query.rs  render.rs  schema.rs
crates/svm-abi/tests/: Cargo.toml  query_tests.rs
crates/svm-app/: Cargo.toml  README.md
crates/svm-app/src/: lib.rs
crates/svm-app/tests/: app_tests.rs  app_tx_tests.rs  deploy_template_tests.rs  exec_app_tests.rs  host_ctx_tests.rs  spawn_app_tests.rs  template_tests.rs
crates/svm-cli/: Cargo.toml
crates/svm-cli/src/: app_template.rs  app_tx.rs  cli.rs  common.rs  lib.rs  main.rs  spawn_app.rs  wasm_value.rs
crates/svm-cli/tests/: app_template_tests.rs  app_tx_tests.rs  spawn_app_tests.rs
crates/svm-codec/: Cargo.toml  build.sh
crates/svm-codec/examples/: package-lock.json  package.json  run  run.sh  test.js
crates/svm-codec/src/: abi.rs  app.rs  calldata.rs  common.rs  cursor.rs  error.rs  ext.rs  field.rs  helpers.rs  lib.rs  serialize.rs  template.rs  transaction.rs
simple-coin-transfer-template/: Cargo.toml  build.sh
simple-coin-transfer-template/src/: lib.rs
(+2199 files in other folders)
