[package]
name = "svm"
version = "0.0.0"
authors = ["Yaron Wittenstein <yaron.wittenstein@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

include = [
  "README.md",
  "LICENSE",
  "Cargo.toml",
  "Cargo.lock",
]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
cfg-if = "1.0"
libc = "0.2"
byteorder = "1.3.2"
tiny-keccak = "1.4.2"
log = "0.4"
lazy_static = "1.4.0"
hex = "0.4"
wasmer = { version = "1.0.2", default-features = false }
wee_alloc = { version = "0.4.5", optional = true }
svm-common = { path = "crates/common" }
svm-hash = { path = "crates/hash" }
svm-kv = { path = "crates/kv", default-features = false }
svm-gas = { path = "crates/gas" }
svm-query = { path = "crates/query" }
svm-types = { path = "crates/types" }
svm-sdk-alloc = { path = "crates/sdk/alloc", default-features = false }
svm-sdk-std = { path = "crates/sdk/std", default-features = false }
svm-sdk-types = { path = "crates/sdk/types", default-features = false }
svm-sdk-storage = { path = "crates/sdk/storage", default-features = false }
svm-sdk-host = { path = "crates/sdk/host", default-features = false }
svm-sdk-macros = { path = "crates/sdk/macros", default-features = false }
svm-sdk = { path = "crates/sdk", default-features = false }
svm-sdk-tests = { path = "crates/sdk-tests" }
svm-nibble = { path = "crates/nibble" }
svm-codec = { path = "crates/codec" }
svm-layout = { path = "crates/layout" }
svm-storage = { path = "crates/storage", default-features = false }
svm-compiler = { path = "crates/compiler", default-features = false }
svm-runtime = { path = "crates/runtime", default-features = false }
svm-ffi = { path = "crates/ffi" }
svm-runtime-ffi = { path = "crates/runtime-ffi", default-features = false }
svm-abi-layout = { path = "crates/abi/layout" }
svm-abi-tests = { path = "crates/abi/tests" }

[dev-dependencies]
wat = "1.0"

[workspace]
members = [
  "crates/query",
  "crates/abi/layout",
  "crates/abi/encoder",
  "crates/abi/decoder",
  "crates/abi/tests",
  "crates/nibble",
  "crates/codec",
  "crates/types",
  "crates/hash",
  "crates/common",
  "crates/sdk/alloc",
  "crates/sdk/types",
  "crates/sdk/storage",
  "crates/sdk/host",
  "crates/sdk/macros",
  "crates/sdk",
  "crates/sdk-tests",
  "crates/kv",
  "crates/layout",
  "crates/storage",
  "crates/runtime",
  "crates/compiler",
  "crates/ffi",
  "crates/runtime-ffi",
]

[features]
default = [
  "dynamic-alloc",
  "default-memory",
  "default-cranelift",
]
static-alloc = [
  "svm-sdk/static-alloc",
]
dynamic-alloc = [
  "svm-sdk/dynamic-alloc",
]
default-llvm = [
  "svm-runtime/default-llvm",
  "svm-runtime-ffi/default-llvm",
]
default-cranelift = [
  "svm-runtime/default-cranelift",
  "svm-runtime-ffi/default-cranelift",
]
default-memory = [
  "svm-runtime-ffi/default-memory", 
  "svm-runtime/default-memory", 
  "svm-kv/default-memory"
]
default-rocksdb = [
  "svm-runtime-ffi/default-rocksdb", 
  "svm-runtime/default-rocksdb",
  "svm-kv/default-rocksdb"
]