[package]
name = "svm"
version = "0.0.0"
authors = ["Spacemesh SVM Team"]
license = "MIT"
edition = "2018"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

include = ["README.md", "LICENSE", "Cargo.toml", "Cargo.lock"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
byteorder = "1.3.2"
cfg-if = "1.0"
clap = "2.33"
hex = "0.4"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
indexmap = "1.6.2"
parity-wasm = "0.42.2"
# rocksdb = { version = "0.15.0", features = ["lz4"], default-features = false, optional = true }
svm-cli = { path = "crates/cli" }
svm-hash = { path = "crates/hash" }
svm-kv = { path = "crates/kv", default-features = false }
svm-gas = { path = "crates/gas" }
svm-query = { path = "crates/query" }
svm-types = { path = "crates/types" }
svm-sdk-alloc = { path = "crates/sdk/alloc", default-features = false }
svm-sdk-std = { path = "crates/sdk/std", default-features = false }
svm-sdk-types = { path = "crates/sdk/types", default-features = false }
svm-sdk-storage = { path = "crates/sdk/storage", default-features = false }
svm-sdk-host = { path = "crates/sdk/host", default-features = false }
svm-sdk-macros = { path = "crates/sdk/macros", default-features = false }
svm-sdk = { path = "crates/sdk", default-features = false }
svm-sdk-tests = { path = "crates/sdk-tests" }
svm-codec = { path = "crates/codec" }
svm-layout = { path = "crates/layout" }
svm-program = { path = "crates/program" }
svm-storage = { path = "crates/storage", default-features = false }
svm-runtime = { path = "crates/runtime", default-features = false }
svm-runtime-ffi = { path = "crates/runtime-ffi", default-features = false }
svm-state = { path = "crates/state", default-features = false }
svm-abi-layout = { path = "crates/abi/layout" }
svm-abi-tests = { path = "crates/abi/tests" }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
wasmer = { version = "2.0.0-rc1", default-features = false }
wee_alloc = { version = "0.4.5", optional = true }

[build-dependencies]
cbindgen = "0.19.0"

[dev-dependencies]
wat = "1.0"
maplit = "1.0.2"

[workspace]
members = [
  "crates/query",
  "crates/abi/layout",
  "crates/abi/encoder",
  "crates/abi/decoder",
  "crates/abi/tests",
  "crates/codec",
  "crates/types",
  "crates/hash",
  "crates/sdk/alloc",
  "crates/sdk/types",
  "crates/sdk/storage",
  "crates/sdk/host",
  "crates/sdk/macros",
  "crates/sdk",
  "crates/sdk-tests",
  "crates/kv",
  "crates/layout",
  "crates/storage",
  "crates/runtime",
  "crates/cli",
  "crates/runtime-ffi",
]

[features]
default = ["default-memory", "default-singlepass"]
default-singlepass = [
  "svm-runtime/default-singlepass", 
  "svm-runtime-ffi/default-singlepass",
]
default-cranelift = [
  "svm-runtime/default-cranelift",
  "svm-runtime-ffi/default-cranelift",
]
default-memory = [
  "svm-runtime-ffi/default-memory",
  "svm-runtime/default-memory",
  "svm-kv/default-memory",
]
default-rocksdb = [
  "svm-runtime-ffi/default-rocksdb",
  "svm-runtime/default-rocksdb",
  "svm-kv/default-rocksdb",
]
