[workspace]
members = [
  "crates/abi-layout",
  "crates/abi-encoder",
  "crates/abi-decoder",
  "crates/cli",
  "crates/codec",
  "crates/gas",
  "crates/hash",
  "crates/program",
  "crates/layout",
  "crates/query",
  "crates/runtime",
  "crates/runtime-ffi",
  "crates/sdk/alloc",
  "crates/sdk/types",
  "crates/sdk/storage",
  "crates/sdk/host",
  "crates/sdk/macros",
  "crates/sdk",
  "crates/sdk-tests",
  "crates/state",
  "crates/svm",
  "crates/types",
  "tests/*",
]
