[package]
name = "svm-simple-coin-transfer-template"
version = "0.1.0"
authors = ["Spacemesh SVM Team"]
license = "MIT"
edition = "2021"
publish = false

[lib]
crate-type = ['cdylib']

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true
debug = false
overflow-checks = false
debug-assertions = false
incremental = false
rpath = false

[dependencies]
svm-sdk = { path = "../../../../sdk", features = ["static-alloc"] }

[workspace]
