[package]
name = "simple-coin-transfer-template"
version = "0.0.0"
authors = ["Spacemesh SVM Team"]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

[lib]
crate-type = ['cdylib']

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true
debug = false
overflow-checks = false
debug-assertions = false
incremental = false
rpath = false

[dependencies]
svm-sdk = { path = "../crates/wasm/sdk", features = ["static-alloc"] }

[workspace]
