[package]
name = "svm-cli"
version = "0.0.0"
authors = ["Yaron Wittenstein <yaron.wittenstein@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

[dependencies]
anyhow = "1"
clap = "2.33"
svm-gas = { path = "../gas" }
svm-program = { path = "../program" }
svm-runtime = { path = "../runtime" }
thiserror = "1"
