[package]
name = "svm-cli"
version = "0.0.0"
authors = ["Spacemesh SVM Team"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

[dependencies]
anyhow = "1"
clap = "2.33"
serde_json = "1"
svm-codec = { path = "../codec" }
svm-gas = { path = "../gas" }
svm-program = { path = "../program" }
svm-runtime = { path = "../runtime" }
svm-types = { path = "../types" }
svm-layout = { path = "../layout" }
thiserror = "1"
