[package]
name = "svm-codec"
version = "0.0.0"
authors = ["Yaron Wittenstein <yaron.wittenstein@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1.0"
svm-common = { path = "../common" }
svm-types = { path = "../types" }
svm-layout = { path = "../layout" }
svm-abi-encoder = { path = "../abi/encoder", features = ["dynamic-alloc"], default-features = false }
svm-abi-decoder = { path = "../abi/decoder", features = ["dynamic-alloc"], default-features = false }
svm-sdk-std     = { path = "../sdk/std", features = ["debug", "dynamic-alloc"], default-features = false }
svm-sdk-types   = { path = "../sdk/types", features = ["debug", "dynamic-alloc"], default-features = false }

[dev-dependencies]
maplit = "1.0.2" 