[package]
name = "svm-codec"
version = "0.0.0"
authors = ["Spacemesh SVM Team"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = "0.99"
hex = "0.4"
indexmap = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
svm-types = { path = "../types" }
svm-layout = { path = "../layout" }
svm-abi-encoder = { path = "../abi/encoder", features = ["dynamic-alloc"], default-features = false }
svm-abi-decoder = { path = "../abi/decoder", features = ["dynamic-alloc"], default-features = false }
svm-sdk-std = { path = "../sdk/std", features = ["debug", "dynamic-alloc"], default-features = false }
svm-sdk-types = { path = "../sdk/types", features = ["debug", "dynamic-alloc"], default-features = false }
thiserror = "1"
toml = "0.5"

[dev-dependencies]
maplit = "1.0.2"
quickcheck = "1"
quickcheck_macros = "1"
