[package]
name = "svm-compiler"
version = "0.0.0"
authors = ["Yaron Wittenstein <yaron.wittenstein@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

[dependencies]
"svm-common" = { path = "../common" }
"wasmer" = { version = "2.0.0-rc1", default-features = false }

[dev-dependencies]
wat = "1.0"

[features]
default = ["default-cranelift"]
default-cranelift = [
    "wasmer/default-cranelift", 
    "wasmer/default-universal"
]
default-llvm = [
    "wasmer/default-llvm",
    "wasmer/default-universal"
]