[package]
name = "svm-ffi"
version = "0.0.0"
authors = ["Yaron Wittenstein <yaron.wittenstein@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

[dependencies]
paste = "0.1"
byteorder = "1.3.2"
lazy_static = "1.4.0"
svm-types = { path = "../types" }
svm-layout = { path = "../layout" }

[build-dependencies]
cbindgen = "0.15.0"

[dev-dependencies]
maplit = "1.0.2"
