[package]
name = "svm-gas"
version = "0.0.0"
authors = ["Yaron Wittenstein <yaron.wittenstein@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
publish = false

[dependencies]
parity-wasm = "0.42.2"
indexmap = "1.6.2"
thiserror = "1"

[dev-dependencies]
wat = "1.0"
maplit = "1.0.2"
