[package]
name = "svm-gas"
version = "0.0.0"
authors = ["Yaron Wittenstein <yaron.wittenstein@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
description = "SVM gas formulas, metering, fixed gas compilation etc."
publish = false

[dependencies]
indexmap = "1.6.2"
parity-wasm = "0.42.2"
petgraph = "0.6"
svm-program = { path = "../program" }
thiserror = "1"

[dev-dependencies]
wat = "1.0"
maplit = "1.0.2"
