[package]
name = "svm-kv"
version = "0.0.0"
authors = ["Spacemesh SVM Team"]
license = "MIT"
edition = "2018"
readme = "README.md"
publish = false

[dependencies]
log = "0.4"
svm-types = { path = "../types" }
rocksdb = { version = "0.15.0", optional = true, default-features = false, features = ["lz4"] }

[dev-dependencies]
env_logger = "0.7.0"

[features]
default = []
default-memory = []
default-rocksdb = ["rocksdb"]
