[package]
name = "svm-runtime"
version = "0.0.0"
authors = ["Spacemesh SVM Team"]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

[dependencies]
byteorder = "1.4.3"
futures = "0.3.17"
log = "0.4.14"
lazy_static = "1.4.0"
thiserror = "1.0.30"
wasmer = { version = "2.0.0", default-features = false }
wat = "1.0.40"
svm-hash = { path = "../hash" }
svm-types = { path = "../types" }
svm-layout = { path = "../layout" }
svm-state = { path = "../state" }
svm-codec = { path = "../codec" }
svm-gas = { path = "../gas" }
svm-program = { path = "../program" }

[dev-dependencies]
maplit = "1.0.2"
svm-sdk = { path = "../sdk", features = ["mock", "dynamic-alloc"], default-features = false }

[features]
default = []
default-singlepass = [
    "wasmer/default-singlepass", 
    "wasmer/default-universal",
]
default-cranelift = [
    "wasmer/default-cranelift",
    "wasmer/default-universal"
]
