[package]
name = "svm-sdk-macros"
version = "0.0.0"
authors = ["Spacemesh SVM Team"]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.32"
quote = "1.0.10"
syn = { version = "1.0.81", features = ["full"] }
serde_json = "1.0.69"
svm-types = { path = "../types" }
svm-sdk-types = { path = "../sdk-types", default-features = false }
svm-abi-encoder = { path = "../abi-encoder", default-features = false }
svm-abi-decoder = { path = "../abi-decoder", default-features = false }
svm-sdk-host = { path = "../sdk-host", default-features = false }
svm-sdk-storage = { path = "../sdk-storage", default-features = false }
svm-sdk-std = { path = "../sdk-std", default-features = false }

[dev-dependencies]
lazy_static = "1.4.0"
trybuild = { version = "1.0.52", features = ["diff"] }

[features]
default = ["mock", "meta", "dynamic-alloc"]
meta = []
ffi = ["svm-sdk-host/ffi", "svm-sdk-storage/ffi"]
mock = ["svm-sdk-host/mock", "svm-sdk-storage/mock"]
static-alloc = [
    "svm-sdk-types/static-alloc",
    "svm-abi-encoder/static-alloc",
    "svm-abi-decoder/static-alloc",
    "svm-sdk-std/static-alloc",
    "svm-sdk-host/static-alloc",
    "svm-sdk-storage/static-alloc",
]
dynamic-alloc = [
    "svm-sdk-types/dynamic-alloc",
    "svm-abi-encoder/dynamic-alloc",
    "svm-abi-decoder/dynamic-alloc",
    "svm-sdk-std/dynamic-alloc",
    "svm-sdk-host/dynamic-alloc",
    "svm-sdk-storage/dynamic-alloc",
]
