[package]
name = "svm-sdk-macros"
version = "0.0.0"
authors = ["Spacemesh SVM Team"]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.14"
syn = { version = "1.0.84", features = ["full"] }
serde_json = "1.0.74"
svm-types = { path = "../types" }
svm-sdk-types = { path = "../sdk-types", default-features = false }
svm-abi-encoder = { path = "../abi-encoder", default-features = false }
svm-abi-decoder = { path = "../abi-decoder", default-features = false }
svm-sdk-host = { path = "../sdk-host", default-features = false }
svm-sdk-storage = { path = "../sdk-storage", default-features = false }
svm-sdk-std = { path = "../sdk-std", default-features = false }

[dev-dependencies]
lazy_static = "1.4.0"
trybuild = { version = "1.0.53", features = ["diff"] }

[features]
default = ["meta", "dynamic-alloc"]
meta = []
static-alloc = [
    "svm-sdk-types/static-alloc",
    "svm-abi-encoder/static-alloc",
    "svm-abi-decoder/static-alloc",
    "svm-sdk-std/static-alloc",
]
dynamic-alloc = [
    "svm-sdk-types/dynamic-alloc",
    "svm-abi-encoder/dynamic-alloc",
    "svm-abi-decoder/dynamic-alloc",
    "svm-sdk-std/dynamic-alloc",
]
