[package]
name = "svm-sdk-storage"
version = "0.0.0"
authors = ["Spacemesh SVM Team"]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

[dependencies]
svm-sdk-alloc = { path = "../sdk-alloc", default-features = false }
svm-sdk-types = { path = "../sdk-types", default-features = false }
svm-sdk-std = { path = "../sdk-std", default-features = false }
