[package]
name = "svm-sdk-tests"
version = "0.0.0"
authors = ["Yaron Wittenstein <yaron.wittenstein@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

[dependencies]
svm-sdk = { path = "../sdk", default-features = false }
svm-sdk-types = { path = "../sdk/types", features = ["debug"] }

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
serde_json = { version = "1.0" }

[features]
default = ["mock", "api"]
mock = ["svm-sdk/mock"]
api = ["svm-sdk/api"]