[package]
name = "svm-sdk-types"
version = "0.0.0"
authors = ["Spacemesh SVM Team"]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

[dependencies]
seq-macro = "0.2.2"
svm-sdk-std = { path = "../sdk-std", default-features = false }

[features]
default = []
debug = ["svm-sdk-std/debug"]
static-alloc = ["svm-sdk-std/static-alloc"]
dynamic-alloc = ["svm-sdk-std/dynamic-alloc"]
