[package]
name = "svm-state"
version = "0.0.0"
authors = ["Spacemesh SVM Team"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

[dependencies]
anyhow = "1.0.45"
blake3 = "1.2.0"
futures = "0.3.17"
# https://github.com/launchbadge/sqlx/issues/713
sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
svm-codec = { path = "../codec" }
svm-hash = { path = "../hash" }
svm-layout = { path = "../layout" }
svm-types = { path = "../types" }
tokio = { version = "1.13.0", features = ["rt"] }
thiserror = "1.0.30"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_async = "0.1.1"
quickcheck_macros = "1.0.0"
tokio = { version = "1.13.0", features = ["rt", "macros"] }
