[package]
name = "svm-state"
version = "0.0.0"
authors = ["Spacemesh SVM Team"]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

[dependencies]
anyhow = "1.0.52"
blake3 = "1.2.0"
futures = "0.3.19"
# https://github.com/launchbadge/sqlx/issues/713
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
svm-codec = { path = "../codec" }
svm-genesis-config = { path = "../genesis-config" }
svm-hash = { path = "../hash" }
svm-layout = { path = "../layout" }
svm-types = { path = "../types" }
tokio = { version = "1.15.0", features = ["rt"] }
thiserror = "1.0.30"
tracing = "0.1.29"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_async = "0.1.1"
quickcheck_macros = "1.0.0"
tokio = { version = "1.15.0", features = ["rt", "macros"] }
